--- a/src/problem_1300.ipynb
+++ b/src/problem_1300.ipynb
@@ -10,18 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "d178477e-6567-4172-b2ac-bac20beed5ff",
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import List\n",
-    "from bisect import bisect_left"
+    "from bisect import bisect_left\n",
+    "from math import ceil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "4e2b8020-e6a5-4392-bf4e-fe3ad5ca9895",
    "metadata": {},
    "outputs": [],
@@ -54,7 +55,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
+   "id": "c929efae-5479-41e0-b3a1-fcfd0928f648",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findBestValue(self, arr: List[int], target: int) -> int:\n",
+    "        arr = sorted(arr, reverse=True)\n",
+    "        ma = arr[0]\n",
+    "        # if smaller values are not the answer - they won't change\n",
+    "        while arr and target >= arr[-1]*len(arr):\n",
+    "            target -= arr.pop()\n",
+    "        # in case of 0.5 bias towards floor\n",
+    "        return ceil(target / len(arr) - 0.5) if arr else ma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "487b9d1b-efa4-493a-b15d-b9fa825a619a",
    "metadata": {},
    "outputs": [],
@@ -64,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "afa6032a-936e-4cd8-ae51-c56fe684b5bb",
    "metadata": {},
    "outputs": [],
@@ -74,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "90e8945d-25fe-4910-b077-3932eab6c1da",
    "metadata": {},
    "outputs": [],
@@ -84,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "e8a56f1c-51e0-4059-b7be-4dd4f232bdab",
    "metadata": {},
    "outputs": [],
