--- a/src/problem_501.ipynb
+++ b/src/problem_501.ipynb
@@ -104,9 +104,11 @@
    "source": [
     "from collections import deque\n",
     "\n",
+    "null = None  # to use Leetcode samples as is\n",
+    "\n",
     "def tree(values):\n",
     "    if not values:\n",
-    "        None\n",
+    "        return null\n",
     "    root = TreeNode(values[0])\n",
     "    queue = deque()\n",
     "    queue.append(root)\n",
@@ -129,9 +131,7 @@
     "        else:\n",
     "            if queue:\n",
     "                queue.append(None)\n",
-    "    return root\n",
-    "\n",
-    "null = None  # to use Leetcode samples as is"
+    "    return root"
    ]
   },
   {
