--- a/src/problem_1248.ipynb
+++ b/src/problem_1248.ipynb
@@ -49,6 +49,28 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "badd0fc3-6cb8-4261-bb4c-a1cd4b5f1c7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def numberOfSubarrays(self, nums: List[int], k: int) -> int:\n",
+    "        def at_most(x):\n",
+    "            res = i = 0\n",
+    "            for j in range(len(nums)):\n",
+    "                x -= nums[j] & 1\n",
+    "                while x < 0:\n",
+    "                    x += nums[i] & 1\n",
+    "                    i += 1\n",
+    "                res += j - i + 1\n",
+    "            return res\n",
+    "        res = at_most(k) - at_most(k - 1)\n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "2ff0bf63-e916-44a7-beb7-794bc5bcb127",
    "metadata": {},
    "outputs": [],
@@ -58,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e734901c-5e62-48e3-b8f6-dbb4f87af93b",
    "metadata": {},
    "outputs": [],
@@ -68,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "23fd1399-6fd5-4215-ba54-e7aff68f2451",
    "metadata": {},
    "outputs": [],
@@ -78,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "3300a7f5-39e4-4151-ba9d-6e40eb40683d",
    "metadata": {},
    "outputs": [],
